chore: add docs
